--- a/index.html
+++ b/index.html
@@ -5,7 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Precision Automation</title>
 </head>
+<header>
+    <h1>Precision Automation</h1>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="standards.css">
+
+    <a href="projects.html">Projects</a>
+    <a href="services.html">Services</a>
+    <a href="aboutus.html">About</a>
+    <a href="contact.html">Contact</a>
+</header>
 <body>
   
+<img src="logo.png" alt="Company Logo">
+
+<section class="missionstatement">
+    <p>
+    At Precision Automation, our mission is to deliver reliable, innovative, and efficient industrial control solutions that empower businesses to operate with accuracy, safety, and confidence. We are committed to advancing automation technology to streamline processes, reduce downtime, and create lasting value for our customers.
+    </p>
+</section>
+
 </body>
 </html>
