--- a/index.html
+++ b/index.html
@@ -4,26 +4,46 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Precision Automation</title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="standards.css">
 </head>
+
+
+
 <header>
-    <h1>Precision Automation</h1>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="standards.css">
-
-    <a href="projects.html">Projects</a>
-    <a href="services.html">Services</a>
-    <a href="aboutus.html">About</a>
-    <a href="contact.html">Contact</a>
+  <h1>Precision Automation</h1>
 </header>
-<body>
-  
-<img src="logo.png" alt="Company Logo">
 
-<section class="missionstatement">
-    <p>
-    At Precision Automation, our mission is to deliver reliable, innovative, and efficient industrial control solutions that empower businesses to operate with accuracy, safety, and confidence. We are committed to advancing automation technology to streamline processes, reduce downtime, and create lasting value for our customers.
-    </p>
-</section>
+
+
+<body>
+  <div class="wrapper">
+    <nav>
+      <ul>
+        <li><img src="images/logo.png" alt="Company Logo" class="logo"></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="aboutus.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+
+    
+
+    <section class="missionstatement">
+      <p>
+        At Precision Automation, our mission is to deliver reliable, innovative, and efficient industrial control solutions that empower businesses to operate with accuracy, safety, and confidence. We are committed to advancing automation technology to streamline processes, reduce downtime, and create lasting value for our customers.
+      </p>
+    </section>
+
+    
+
+    <footer>
+      <p>
+        Corpoate Headquarters  777 Somewhere Road, OH 5132
+      </p>
+    </footer>
+  </div>
 
 </body>
 </html>
