--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
   <div class="wrapper">
     <nav>
+      <img src="images/logo.png" alt="Company Logo" class="logo"></li>
       <ul>
-        <li><img src="images/logo.png" alt="Company Logo" class="logo"></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="aboutus.html">About</a></li>
@@ -36,7 +36,7 @@
       </p>
     </section>
 
-    
+
 
     <footer>
       <p>
