--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 <body>
   <div class="wrapper">
+
+
     <nav>
       <img src="images/logo.png" alt="Company Logo" class="logo"></li>
       <ul>
@@ -28,19 +30,46 @@
       </ul>
     </nav>
 
-    
+    <main>
 
-    <section class="missionstatement">
-      <p>
-        At Precision Automation, our mission is to deliver reliable, innovative, and efficient industrial control solutions that empower businesses to operate with accuracy, safety, and confidence. We are committed to advancing automation technology to streamline processes, reduce downtime, and create lasting value for our customers.
-      </p>
-    </section>
+      <section class="span2">
+        <p>“Smart Controls. Seamless Performance.”</p>
+      </section>
 
+      <section>
+        <img src="images/thinkplc.jpg" alt="PLC Photo">
+      </section>
+
+
+      <section class="missionstatement">
+        <h2>Mission Statement:</h2>
+
+        <p>
+          "At Precision Automation, our mission is to deliver reliable, innovative, and efficient industrial control solutions that empower businesses to operate with accuracy, safety, and confidence. We are committed to advancing automation technology to streamline processes, reduce downtime, and create lasting value for our customers."
+        </p>
+      </section>
+
+      <h2>What We Do</h2>
+
+      <ul>
+        <li>Industrial Control Systems – Complete solutions for plant-wide or process-specific automation.</li>
+
+        <li>PLC & HMI Programming – Custom logic and intuitive operator interfaces.</li>
+
+        <li>Motion & Process Control – Precision for motors, drives, and process variables.</li>
+
+        <li>Safety & Compliance Systems – Protecting people and meeting regulations.</li>
+
+        <li>Custom Integration – Tailored solutions built for your operations.</li>
+      </ul>
+
+
+    </main>
 
 
     <footer>
       <p>
-        Corpoate Headquarters  777 Somewhere Road, OH 5132
+        Corpoate Headquarters 777 Somewhere Road, OH 5132
       </p>
     </footer>
   </div>
