--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,31 @@
-Get in Touch
+<h2>Get in Touch</h2>
 
-Address: 1234 Industrial Drive, Suite 200, City, ST 4321
-Phone: (555) 123-4567
-Email: info@precisionautomation.com
+<ul>
+  <li>Address: 1234 Industrial Drive, Suite 200, City, ST</li> 
+  <li>4321</li>
+  <li>Phone: (555) 123-4567</li>
+  <li>Email: info@precisionautomation.com</li>
+</ul>
 
-Office Hours
+<h2>Office Hours</h2>
 
-Monday – Friday: 8:00 AM – 5:00 PM
-Saturday & Sunday: Closed
+<p>
+  Monday – Friday: 8:00 AM – 5:00 PM
+  Saturday & Sunday: Closed
+</p>
 
-Contact Form
+<h2>Contact Form</h2>
 
-Fill out the form below and one of our specialists will get back to you as soon as possible:
+<p>Fill out the form below and one of our specialists will get back to you as soon as possible:</p>
 
-Name: []
-Email: []
-Phone: [__________]
-Message: [______________________________________]
-
-[ Submit ]
+<form action="/action_page.php">
+  <label for="fname">Name:</label><br>
+  <input type="text" id="fname" ><br><br>
+  <label for="fname">Phone number:</label><br>
+  <input type="text" id="fnumber" ><br><br>
+  <label for="fname">Email:</label><br>
+  <input type="text" id="femail"><br><br>
+  <label for="fname">Company:</label><br>
+  <input type="text" id="fcompany"><br><br>
+  <input type="submit" value="Submit">
+</form> 
