--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
         </p>
       </section>
 
+      <section>
+        <img src="images/hmi_panel.webp" alt="Panel">
+      </section>
+
       <h2>What We Do</h2>
 
       <ul>
