fixed format of main page

--- a/index.html
+++ b/index.html
@@ -14,12 +14,8 @@
   <h1>Precision Automation</h1>
 </header>
 
-
-
 <body>
   <div class="wrapper">
-
-
     <nav>
       <img src="images/logo.png" alt="Company Logo" class="logo"></li>
       <ul>
@@ -31,17 +27,13 @@
     </nav>
 
     <main>
-
       <section class="span2">
         <p>“Smart Controls. Seamless Performance.”</p>
       </section>
-
-      <section>
+      <section class="columnleft">
         <img src="images/thinkplc.jpg" alt="PLC Photo">
       </section>
-
-
-      <section class="missionstatement">
+      <section class="columnleft">
         <h2>Mission Statement:</h2>
 
         <p>
@@ -49,10 +41,11 @@
         </p>
       </section>
 
-      <section>
+      <section class="columnright">
         <img src="images/hmi_panel.webp" alt="Panel">
       </section>
-
+      
+<section class="columnright">
       <h2>What We Do</h2>
 
       <ul>
@@ -66,7 +59,7 @@
 
         <li>Custom Integration – Tailored solutions built for your operations.</li>
       </ul>
-
+</section>
 
     </main>
 
