--- a/contact.html
+++ b/contact.html
@@ -1,31 +1,78 @@
-<h2>Get in Touch</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Precision Automation</title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="standards.css">
+</head>
 
-<ul>
-  <li>Address: 1234 Industrial Drive, Suite 200, City, ST</li> 
-  <li>4321</li>
-  <li>Phone: (555) 123-4567</li>
-  <li>Email: info@precisionautomation.com</li>
-</ul>
 
-<h2>Office Hours</h2>
+<body>
+  <div class="wrapper">
+    <nav>
+      <img src="images/logo.png" alt="Company Logo" class="logo"></li>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="aboutus.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
 
-<p>
-  Monday – Friday: 8:00 AM – 5:00 PM
-  Saturday & Sunday: Closed
-</p>
+    <main>
 
-<h2>Contact Form</h2>
+<section class="column1">
+  <h1>Get in Touch</h1>
+  
+  <ul>
+    <li>Address: <a href="https://www.google.com/maps/place/2600+Clifton+Ave,+Cincinnati,+OH+45221/@39.134266,-84.5122413,15z/data=!3m1!4b1!4m6!3m5!1s0x8841b38acb65ec25:0x5f85ca2075f68b40!8m2!3d39.1321118!4d-84.514354!16s%2Fg%2F11b8txd54y?entry=ttu&g_ep=EgoyMDI1MTAwMS4wIKXMDSoASAFQAw%3D%3D">2600 Clifton Ave. Cincinnati, OH 45221</a></li>
+    <li>4321</li>
+    <li>Phone: (555) 123-4567</li>
+    <li>Email: info@precisionautomation.com</li>
+  </ul>
+</section>
 
-<p>Fill out the form below and one of our specialists will get back to you as soon as possible:</p>
+<section class="column1">
+  <h2>Office Hours</h2>
+  
+  <p>
+    Monday – Friday: 8:00 AM – 5:00 PM
+    Saturday & Sunday: Closed
+  </p>
+</section>
 
-<form action="/action_page.php">
-  <label for="fname">Name:</label><br>
-  <input type="text" id="fname" ><br><br>
-  <label for="fname">Phone number:</label><br>
-  <input type="text" id="fnumber" ><br><br>
-  <label for="fname">Email:</label><br>
-  <input type="text" id="femail"><br><br>
-  <label for="fname">Company:</label><br>
-  <input type="text" id="fcompany"><br><br>
-  <input type="submit" value="Submit">
-</form> 
+<section class="column1
+">
+  <h2>Contact Form</h2>
+  
+  <p>
+    Fill out the form below and one of our specialists will get back to you as soon as possible:
+  </p>
+  
+  <form action="/storage.php">
+    <label for="fname">Name:</label><br>
+    <input type="text" id="fname" ><br><br>
+    <label for="fname">Phone number:</label><br>
+    <input type="text" id="fnumber" ><br><br>
+    <label for="fname">Email:</label><br>
+    <input type="text" id="femail"><br><br>
+    <label for="fname">Company:</label><br>
+    <input type="text" id="fcompany"><br><br>
+    <input type="submit" value="Submit">
+  </form>
+</section>
+
+</main>
+
+
+    <footer>
+      <p>
+        Corpoate Headquarters: 2600 Clifton Ave. Cincinnati, OH 45221
+      </p>
+    </footer>
+  </div>
+
+</body>
+</html>
