--- a/index.html
+++ b/index.html
@@ -9,17 +9,12 @@
 </head>
 
 
-
-<header>
-  <h1>Precision Automation</h1>
-</header>
-
 <body>
   <div class="wrapper">
     <nav>
       <img src="images/logo.png" alt="Company Logo" class="logo"></li>
       <ul>
-        <li><a href="projects.html">Projects</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="aboutus.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -27,46 +22,61 @@
     </nav>
 
     <main>
+
       <section class="span2">
         <p>“Smart Controls. Seamless Performance.”</p>
       </section>
-      <section class="columnleft">
-        <img src="images/thinkplc.jpg" alt="PLC Photo">
+
+      <section class="column2">
+        <section class="column">
+          <img src="images/thinkplc.jpg" alt="PLC Photo">
+        </section>
+
+        <section class="column">
+          <h2>Mission Statement:</h2>
+
+          <p>
+            "At Precision Automation, our mission is to deliver reliable, innovative, and efficient industrial control solutions that empower businesses to operate with accuracy, safety, and confidence. We are committed to advancing automation technology to streamline processes, reduce downtime, and create lasting value for our customers."
+          </p>
+        </section>
       </section>
-      <section class="columnleft">
-        <h2>Mission Statement:</h2>
 
-        <p>
-          "At Precision Automation, our mission is to deliver reliable, innovative, and efficient industrial control solutions that empower businesses to operate with accuracy, safety, and confidence. We are committed to advancing automation technology to streamline processes, reduce downtime, and create lasting value for our customers."
-        </p>
+      <section class="column2">
+        <section class="column">
+          <h2>What We Do</h2>
+
+          <ul>
+            <li>
+              Industrial Control Systems – Complete solutions for plant-wide or process-specific automation.
+            </li>
+
+            <li>
+              PLC & HMI Programming – Custom logic and intuitive operator interfaces.
+            </li>
+
+            <li>
+              Motion & Process Control – Precision for motors, drives, and process variables.
+            </li>
+
+            <li>
+              Safety & Compliance Systems – Protecting people and meeting regulations.
+            </li>
+
+            <li>
+              Custom Integration – Tailored solutions built for your operations.
+            </li>
+          </ul>
+        </section>
+        <section class="column">
+          <img src="images/hmi_panel.webp" alt="Panel">
+        </section>
       </section>
-
-      <section class="columnright">
-        <img src="images/hmi_panel.webp" alt="Panel">
-      </section>
-      
-<section class="columnright">
-      <h2>What We Do</h2>
-
-      <ul>
-        <li>Industrial Control Systems – Complete solutions for plant-wide or process-specific automation.</li>
-
-        <li>PLC & HMI Programming – Custom logic and intuitive operator interfaces.</li>
-
-        <li>Motion & Process Control – Precision for motors, drives, and process variables.</li>
-
-        <li>Safety & Compliance Systems – Protecting people and meeting regulations.</li>
-
-        <li>Custom Integration – Tailored solutions built for your operations.</li>
-      </ul>
-</section>
-
     </main>
 
 
     <footer>
       <p>
-        Corpoate Headquarters 777 Somewhere Road, OH 5132
+        Corpoate Headquarters: 2600 Clifton Ave. Cincinnati, OH 45221
       </p>
     </footer>
   </div>
