--- a/services.html
+++ b/services.html
@@ -1,19 +1,83 @@
-Industrial Control Systems
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Precision Automation</title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="standards.css">
+</head>
 
-We provide fully integrated industrial control systems designed to keep your operations running at peak performance. From small-scale control panels to large, plant-wide systems, our solutions combine proven hardware with advanced software to give you reliable and precise control. Whether you need new installations or upgrades to existing systems, we deliver technology that improves safety, efficiency, and productivity.
 
-PLC & HMI Programming
+<body>
+  <div class="wrapper">
+    <nav>
+      <img src="images/logo.png" alt="Company Logo" class="logo"></li>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="aboutus.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
 
-At the core of many automation systems are Programmable Logic Controllers (PLCs) and Human-Machine Interfaces (HMIs). Our team develops and programs these systems to match your exact process requirements. From logic sequencing and process automation to operator-friendly HMI screens, we ensure your staff can monitor and control operations with ease and confidence.
+    <main>
 
-Motion & Process Control
 
-We specialize in motion control for motors, drives, and actuators, as well as process control for temperature, pressure, flow, and other critical variables. By implementing precise and responsive control strategies, we help businesses reduce waste, maintain consistency, and achieve the highest level of product quality.
+      <section class="column1">
+        <h1>Industrial Control Systems</h1>
+        <p>We provide fully integrated industrial control systems designed to keep your operations running at peak performance. From small-scale control panels to large, plant-wide systems, our solutions combine proven hardware with advanced software to give you reliable and precise control. Whether you need new installations or upgrades to existing systems, we deliver technology that improves safety, efficiency, and productivity.</p>
+      </section>
 
-Safety & Compliance Systems
+      <section class="column2">
+        <section class="column">
+          <h2>PLC & HMI Programming</h2>
 
-Worker safety and regulatory compliance are top priorities in any industrial environment. We design and implement safety control systems including emergency stop circuits, interlocks, and monitoring systems that meet or exceed industry standards. With our expertise, you can be confident your operations are both secure and compliant.
+          <p>At the core of many automation systems are Programmable Logic Controllers (PLCs) and Human-Machine Interfaces (HMIs). Our team develops and programs these systems to match your exact process requirements. From logic sequencing and process automation to operator-friendly HMI screens, we ensure your staff can monitor and control operations with ease and confidence.</p>
+        </section>
+        <img src="images/scada.png" alt="">
+      </section>
 
-Custom Solutions & Integration
+      <section class="column2">
 
-Every facility is unique, which is why we offer custom control solutions tailored to your operations. We integrate new technologies with existing systems, providing seamless communication across equipment and processes. Our scalable designs allow you to expand or adapt your system as your business grows.
+        <section class="column">
+          <img src="images/motionprocess.jpeg" alt="">
+        </section>
+
+        <section class="column">
+
+
+          <h2>Motion & Process Control</h2>
+
+          <p>We specialize in motion control for motors, drives, and actuators, as well as process control for temperature, pressure, flow, and other critical variables. By implementing precise and responsive control strategies, we help businesses reduce waste, maintain consistency, and achieve the highest level of product quality.</p>
+        </section>
+      </section>
+
+
+      <section class="column2">
+        <section>
+          <h2>Safety & Compliance Systems</h2>
+          Worker safety and regulatory compliance are top priorities in any industrial environment. We design and implement safety control systems including emergency stop circuits, interlocks, and monitoring systems that meet or exceed industry standards. With our expertise, you can be confident your operations are both secure and compliant.
+        </section>
+        <section><img src="images/estop.jpeg" alt="">
+        </section>
+      </section>
+
+      <section class="column1">
+        <h2>Custom Solutions & Integration</h2>
+        <p>Every facility is unique, which is why we offer custom control solutions tailored to your operations. We integrate new technologies with existing systems, providing seamless communication across equipment and processes. Our scalable designs allow you to expand or adapt your system as your business grows.</p>
+      </section>
+
+
+    </main>
+
+
+    <footer>
+      <p>
+        Corpoate Headquarters: 2600 Clifton Ave. Cincinnati, OH 45221
+      </p>
+    </footer>
+  </div>
+
+</body>
+</html>
