--- a/aboutus.html
+++ b/aboutus.html
@@ -1,12 +1,53 @@
-<h2>About Us</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Precision Automation</title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="standards.css">
+</head>
 
-<p>At Precision Automation, we specialize in designing and delivering advanced industrial control and automation solutions that help businesses operate more efficiently, reliably, and safely. With a focus on precision engineering and innovative technology, we provide systems that streamline production, reduce downtime, and improve overall performance.</p>
+
+<body>
+  <div class="wrapper">
+    <nav>
+      <img src="images/logo.png" alt="Company Logo" class="logo"></li>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="aboutus.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+
+    <main>
+
+<section class="column1">
+  <h2>About Us</h2>
+  
+  <p>At Precision Automation, we specialize in designing and delivering advanced industrial control and automation solutions that help businesses operate more efficiently, reliably, and safely. With a focus on precision engineering and innovative technology, we provide systems that streamline production, reduce downtime, and improve overall performance.</p>
+
 
 <p>Our team brings years of experience in industrial automation, combining technical expertise with a customer-first mindset. Whether it’s process control, custom integration, or modernizing existing systems, we tailor every solution to meet the unique needs of our clients. By leveraging proven technologies and forward-looking strategies, we enable industries to keep pace with the demands of today while preparing for the challenges of tomorrow.</p>
+</section>
+
+<section class="column1">
+  <h2>Our Approach</h2>
+  
+  <p>We believe that successful automation is more than just technology—it’s about trust, collaboration, and delivering lasting value. From the first consultation to installation and ongoing support, we work closely with our clients to ensure seamless implementation and maximum return on investment. Our solutions are built to be scalable and adaptable, giving businesses the flexibility to grow without limits.</p>
+  
+  <p>At the core of our work is a commitment to quality, precision, and innovation. By focusing on these principles, Precision Automation continues to empower companies across industries to achieve operational excellence.</p>
+</section>
+</main>
 
 
-<h2>Our Approach</h2>
+    <footer>
+      <p>
+        Corpoate Headquarters: 2600 Clifton Ave. Cincinnati, OH 45221
+      </p>
+    </footer>
+  </div>
 
-<p>We believe that successful automation is more than just technology—it’s about trust, collaboration, and delivering lasting value. From the first consultation to installation and ongoing support, we work closely with our clients to ensure seamless implementation and maximum return on investment. Our solutions are built to be scalable and adaptable, giving businesses the flexibility to grow without limits.</p>
-
-<p>At the core of our work is a commitment to quality, precision, and innovation. By focusing on these principles, Precision Automation continues to empower companies across industries to achieve operational excellence.</p>
+</body>
+</html>
