--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,11 @@
   <title>Precision Automation</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="standards.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Hegarty&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 
@@ -45,23 +50,12 @@
 
 <section class="column1
 ">
-  <h2>Contact Form</h2>
+  <h2>Request a Quote / Start a Project</h2>
   
   <p>
-    Fill out the form below and one of our specialists will get back to you as soon as possible:
+    Tell us a bit about your application, timelines, and any specs you already have. We’ll follow up with next steps and a straightforward plan.
   </p>
-  
-  <form action="/storage.php">
-    <label for="fname">Name:</label><br>
-    <input type="text" id="fname" ><br><br>
-    <label for="fname">Phone number:</label><br>
-    <input type="text" id="fnumber" ><br><br>
-    <label for="fname">Email:</label><br>
-    <input type="text" id="femail"><br><br>
-    <label for="fname">Company:</label><br>
-    <input type="text" id="fcompany"><br><br>
-    <input type="submit" value="Submit">
-  </form>
+
 </section>
 
 </main>
