--- a/index.html
+++ b/index.html
@@ -6,20 +6,29 @@
   <title>Precision Automation</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="standards.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Hegarty&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 
 <body>
   <div class="wrapper">
-    <nav>
-      <img src="images/logo.png" alt="Company Logo" class="logo"></li>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="aboutus.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+
+    <header>
+      <nav>
+        <img src="images/logo.png" alt="Company Logo" class="logo"></li>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="aboutus.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
 
     <main>
 
@@ -51,7 +60,7 @@
             </li>
 
             <li>
-              PLC & HMI Programming – Custom logic and intuitive operator interfaces.
+              PLC & HMI Programming
             </li>
 
             <li>
