Fixed some bugs

--- a/services.html
+++ b/services.html
@@ -40,13 +40,13 @@
 
           <p>At the core of many automation systems are Programmable Logic Controllers (PLCs) and Human-Machine Interfaces (HMIs). Our team develops and programs these systems to match your exact process requirements. From logic sequencing and process automation to operator-friendly HMI screens, we ensure your staff can monitor and control operations with ease and confidence.</p>
         </section>
-        <img src="images/scada.png" alt="">
+        <img src="images/scada.png" alt="SCADA system">
       </section>
 
       <section class="column2">
 
         <section class="column">
-          <img src="images/motionprocess.jpeg" alt="">
+          <img src="images/Robot_arm.jpg" alt="Automated robot arm">
         </section>
 
         <section class="column">
@@ -64,7 +64,7 @@
           <h2>Safety & Compliance Systems</h2>
           Worker safety and regulatory compliance are top priorities in any industrial environment. We design and implement safety control systems including emergency stop circuits, interlocks, and monitoring systems that meet or exceed industry standards. With our expertise, you can be confident your operations are both secure and compliant.
         </section>
-        <section><img src="images/estop.jpeg" alt="">
+        <section><img src="images/Safety_stop.jpg" alt="E-stop pushbutton">
         </section>
       </section>
 
