--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </ul>
         </section>
         <section class="column">
-          <img src="images/hmi_panel.webp" alt="Panel">
+          <img src="images/hmi_panel.webp" alt="HMI panel">
         </section>
       </section>
     </main>
